[FIXES BUG #3534: style issue in employee timetable --check in windows also--alignment] table column minimun width for browsers other than firefox
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3657 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/public/stylesheets/timetable/teachers_timetable.css
+++ b/public/stylesheets/timetable/teachers_timetable.css
@@ -54,6 +54,7 @@ padding-left: 0px;
     font-weight: bold;
     font-size: 12px;
     background-color: #fff;
+    min-width: 70px;
 }
 #table-viewer{
 /*    height:480px;*/
